syntax = "proto3";

package health.v1;

// 提供ステータス
enum ServingStatus {
  // 不明
  SERVING_STATUS_UNSPECIFIED = 0;
  // 提供できる
  SERVING_STATUS_OK = 1;
  // まだ提供できない
  SERVING_STATUS_NOT_YET = 2;
  // 存在しない
  SERVING_STATUS_UNKNOWN = 3;
}

message CheckRequest {
  // サービス名 (ex. HealthService)
  string service = 1;
}

message CheckResponse {
  // 提供ステータス
  ServingStatus status = 1;
}

message WatchRequest {
  // サービス名 (ex. HealthService)
  string service = 1;
}

message WatchResponse {
  // 提供ステータス
  ServingStatus status = 1;
}

service HealthService {
  // サービスの動作状況を確認
  rpc Check(CheckRequest) returns (CheckResponse);
  // サービスの動作状況を監視
  rpc Watch(WatchRequest) returns (stream WatchResponse);
}
